--- a/CSS/index.css
+++ b/CSS/index.css
@@ -18,4 +18,17 @@
     background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('../assets/imgs/background.jpg');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat ;
+}
+
+.img-about {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border: 10px;
+    border-color: grey;
+    border-width: 10px;
+    border-radius: 15px 15px 15px 15px;
+    box-shadow: 8px 8px 5px grey;
+
 }
